feat: fix aws mock issues